# remote-record

./: LICENSE
client/: CMakeLists.txt  LivePlayClient.cpp  LivePlayClient.h  RemoteRecordClient.cpp  RemoteRecordClient.h  main.cpp
server/: CMakeLists.txt  LivePlayServer.cpp  LivePlayServer.h  RemoteRecordServer.cpp  RemoteRecordServer.h  main.cpp
